deploy: 7cc5fd93042f1a861ed4b4bb3a483fb3e481179e

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
   <h1>Welcome</h1>
 
 <h2 id="this-is-luiss-website-for-egr314-also-first-change-to-website">This is Luis's website for EGR314. Also first change to website</h2>
-<p>What is this to the right of the text? <strong>this is bold</strong>: this is still not working for me. 4th time is good luck. last change for night</p>
+<p>What is this to the right of the text? <strong>this is bold</strong>: this is still not working for me. 4th time is good luck. last change for night. <em>Test 6</em>.</p>
 <ul>
 <li>Et ducimus</li>
 <li>Prosecta hinc nix vidi rettulit cum sitim</li>
