deploy: 48009bd57fc76dacc1ded0629572b3d668886eb8

--- a/componentSelection/index.html
+++ b/componentSelection/index.html
@@ -607,7 +607,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Option 1\ESP32-S3-WROOM-1-N4$2.95/Each <a href="https://www.digikey.com/en/products/detail/espressif-systems/ESP32-S3-WROOM-1-N4/16162639">Link for ESP32</a></td>
+<td>Option 1<br>ESP32-S3-WROOM-1-N4<br>$2.95/Each<br><a href="https://www.digikey.com/en/products/detail/espressif-systems/ESP32-S3-WROOM-1-N4/16162639">Link for ESP32</a></td>
 <td>pros for esp</td>
 <td>cons for esp</td>
 </tr>
