--- a/componentSelection/index.html
+++ b/componentSelection/index.html
@@ -611,6 +611,11 @@
 <td>pros for esp</td>
 <td>cons for esp</td>
 </tr>
+<tr>
+<td>Option 2<br>name_of_microntroller<br>Price/Each<br>link_to_microcon</td>
+<td>pros</td>
+<td>cons</td>
+</tr>
 </tbody>
 </table>
 
