deploy: ff895d23ccab950e2f4f9e82d0e2359527bf04fa

--- a/componentSelection/index.html
+++ b/componentSelection/index.html
@@ -621,7 +621,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Option 1<br><a class="glightbox" href="./" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Esp32-WROOM" src="./" /></a><br>ESP32-S3-WROOM-1-N4<br>$2.95/Each<br><a href="https://www.digikey.com/en/products/detail/espressif-systems/ESP32-S3-WROOM-1-N4/16162639">Link for ESP32</a></td>
+<td>Option 1<br><a class="glightbox" href="../microconSelect.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="ESP32-S3-WROOM-1-N4" src="../microconSelect.png" /></a><br>ESP32-S3-WROOM-1-N4<br>$2.95/Each<br><a href="https://www.digikey.com/en/products/detail/espressif-systems/ESP32-S3-WROOM-1-N4/16162639">RF TX/RX MOD BT WIFI PCB TH SMD</a></td>
 <td><li>We use in class</li><li>Don't have to download new software to program</li></td>
 <td><li>Many unused pins</li></td>
 </tr>
@@ -643,7 +643,7 @@
 <td>cons</td>
 </tr>
 <tr>
-<td>Option 2<br><a href="../option2SVR.png">LM2575-3.3WU-TR</a><br>$1.75/Each<br><a href="https://www.digikey.ch/en/products/detail/microchip-technology/LM2575-3-3WU-TR/1027646">IC REG BUCK 3.3V 1A TO263-5</a></td>
+<td>Option 2<br><a class="glightbox" href="../option2SVR.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="LM2575-3.3WU-TR" src="../option2SVR.png" /></a><br>$1.75/Each<br><a href="https://www.digikey.ch/en/products/detail/microchip-technology/LM2575-3-3WU-TR/1027646">IC REG BUCK 3.3V 1A TO263-5</a></td>
 <td>pros</td>
 <td>cons</td>
 </tr>
