deploy: fe04ffa9e986dc2fdabf95cb7a6fe11d006bb264

--- a/componentSelection/index.html
+++ b/componentSelection/index.html
@@ -681,90 +681,71 @@
 </tbody>
 </table>
 <h3 id="rational">Rational</h3>
-<h1 id="esp32-s3-wroom-1-n4">ESP32-S3-WROOM-1-N4</h1>
+<h1 id="esp32-s3-wroom-1-n4-diagram-and-table">ESP32-S3-WROOM-1-N4 Diagram and Table</h1>
+<p><a class="glightbox" href="../esp32Pinout.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="ESP32 Pinout" src="../esp32Pinout.png" /></a></p>
 <table>
 <thead>
 <tr>
 <th>ESP Info</th>
 <th>Answer</th>
-<th>Help</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>Model</td>
-<td>?</td>
-<td>Include the entire part number (leave off any letters at the end that specify the package type)</td>
+<td>ESP32-S3-WROOM-1-N4</td>
 </tr>
 <tr>
 <td>Product Page URL</td>
-<td>?</td>
-<td><a href="https://www.espressif.com/en/products/modules">Product page</a> found here. com</td>
+<td><a href="https://www.espressif.com/en/products/modules">Product page</a></td>
 </tr>
 <tr>
 <td>ESP32-S3-WROOM-1-N4 Datasheet URL</td>
-<td>?</td>
-<td>Do not paste links directly into the table.  Use a <a href="https://www.espressif.com/sites/default/files/documentation/esp32-s3-wroom-1_wroom-1u_datasheet_en.pdf">ESP32-S3-WROOM-1-N4</a></td>
+<td><a href="https://www.espressif.com/sites/default/files/documentation/esp32-s3-wroom-1_wroom-1u_datasheet_en.pdf">ESP32-S3-WROOM-1-N4</a></td>
 </tr>
 <tr>
 <td>ESP32 S3 Datasheet URL</td>
-<td>?</td>
-<td><a href="https://espressif.com/documentation/esp32-s3_datasheet_en.pdf">ESP32-S3</a> functions</td>
+<td><a href="https://espressif.com/documentation/esp32-s3_datasheet_en.pdf">ESP32-S3</a></td>
 </tr>
 <tr>
 <td>ESP32 S3 Technical Reference Manual URL</td>
-<td>?</td>
 <td><a href="https://espressif.com/documentation/esp32-s3_datasheet_en.pdf">Technical Manual</a></td>
 </tr>
 <tr>
 <td>Vendor link</td>
-<td>?</td>
 <td><a href="https://www.digikey.com/en/products/detail/espressif-systems/ESP32-S3-WROOM-1-N4/16162639">Digikey</a></td>
 </tr>
 <tr>
 <td>Code Examples</td>
-<td>?</td>
-<td>url(s) for libraries on github or other sites related to the microcontroller and your planned peripherals</td>
+<td>None can be found.</td>
 </tr>
 <tr>
 <td>External Resources URL(s)</td>
-<td>?</td>
-<td>Search on Google and YouTube for other resources for each specific microcontroller.</td>
+<td>Wifi beginners guide <a href="https://www.youtube.com/watch?v=aH3sLEQI4_w">video</a></td>
 </tr>
 <tr>
 <td>Unit cost</td>
-<td>?</td>
 <td>$2.95</td>
 </tr>
 <tr>
-<td>Absolute Maximum Current for entire IC</td>
-<td>?</td>
-<td>500mA</td>
-</tr>
-<tr>
 <td>Supply Voltage Range</td>
-<td>?</td>
-<td>Min / Nominal / Max / Absolute Max, as found in datasheet</td>
+<td>3V / 3.3V / 3.6V</td>
 </tr>
 <tr>
 <td>Absolute Maximum current <br> (for entire IC)</td>
-<td>?</td>
-<td>as found in datasheet</td>
+<td>Not Stated/ MIN current: 500mA</td>
 </tr>
 <tr>
 <td>Maximum GPIO current <br> (per pin)</td>
-<td>?</td>
-<td>as found in datasheet</td>
+<td>20mA, 1500mA total</td>
 </tr>
 <tr>
 <td>Supports External Interrupts?</td>
-<td>?</td>
-<td>as found in datasheet</td>
+<td>Yes, only 1.</td>
 </tr>
 <tr>
 <td>Required Programming Hardware, Cost, URL</td>
-<td>?</td>
-<td>as found in datasheet</td>
+<td>MPLAB / FREE / <a class="glightbox" href="https://www.microchip.com/en-us/tools-resources/develop/mplab-x-ide" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="link to MPLAB" src="https://www.microchip.com/en-us/tools-resources/develop/mplab-x-ide" /></a></td>
 </tr>
 </tbody>
 </table>
@@ -780,57 +761,51 @@
 <tbody>
 <tr>
 <td>UART</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>2</td>
+<td>2</td>
+<td>IO17(10), IO18(11)</td>
 </tr>
 <tr>
 <td>external SPI*</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>36</td>
+<td>0</td>
+<td></td>
 </tr>
 <tr>
 <td>I2C</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>26</td>
+<td>0</td>
+<td></td>
 </tr>
 <tr>
 <td>GPIO</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>36</td>
+<td>0</td>
+<td></td>
 </tr>
 <tr>
 <td>ADC</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>20</td>
+<td>0</td>
+<td></td>
 </tr>
 <tr>
 <td>LED PWM</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>36</td>
+<td>1</td>
+<td>IO46(16)</td>
 </tr>
 <tr>
 <td>Motor PWM</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>36</td>
+<td>0</td>
+<td></td>
 </tr>
 <tr>
 <td>USB Programmer</td>
-<td>?</td>
-<td>1</td>
-<td>?</td>
-</tr>
-<tr>
-<td>...</td>
-<td></td>
-<td></td>
-<td></td>
+<td>2</td>
+<td>2</td>
+<td>IO19(13), IO20(14)</td>
 </tr>
 </tbody>
 </table>
