deploy: fa55ccf15ba64023d32e07adcfa51f482ecdd4a2

--- a/componentSelection/index.html
+++ b/componentSelection/index.html
@@ -669,12 +669,12 @@
 <td><li>Frequency switching is much smaller than option 2</li></td>
 </tr>
 <tr>
-<td>Option 2<br><a class="glightbox" href="../option2SVR.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="LM2575-3.3WU-TR" src="../option2SVR.png" /></a><br>$1.75/Each<br><a href="https://www.digikey.ch/en/products/detail/microchip-technology/LM2575-3-3WU-TR/1027646">IC REG BUCK 3.3V 1A TO263-5</a></td>
+<td>Option 2<br><a class="glightbox" href="../option2SVR.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="LM2575-3.3WU-TR" src="../option2SVR.png" /></a><br>LM2575-3.3WU-TR<br>$1.75/Each<br><a href="https://www.digikey.ch/en/products/detail/microchip-technology/LM2575-3-3WU-TR/1027646">IC REG BUCK 3.3V 1A TO263-5</a></td>
 <td><li>Easy to solder</li></td>
 <td><li>Less heat resistant than option 1</li></td>
 </tr>
 <tr>
-<td>Option 3<br><a class="glightbox" href="../option3SVR.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="TPS62162DSGR" src="../option3SVR.png" /></a><br>$1.38/Each<br><a href="https://www.digikey.ch/en/products/detail/texas-instruments/TPS62162DSGR/2833447">IC REG BUCK 3.3V 1A 8WSON</a></td>
+<td>Option 3<br><a class="glightbox" href="../option3SVR.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="TPS62162DSGR" src="../option3SVR.png" /></a><br>TPS62162DSGR<br>$1.38/Each<br><a href="https://www.digikey.ch/en/products/detail/texas-instruments/TPS62162DSGR/2833447">IC REG BUCK 3.3V 1A 8WSON</a></td>
 <td><li>Small, so saves space on a PCB.</li></td>
 <td><li>Potentially difficult to solder</li></td>
 </tr>
