deploy: bac42a58cf121483136930a12ad5f2d66b501bf5

--- a/componentSelection/index.html
+++ b/componentSelection/index.html
@@ -746,7 +746,7 @@
 </tr>
 <tr>
 <td>Required Programming Hardware, Cost, URL</td>
-<td>MPLAB / FREE / <a class="glightbox" href="https://www.microchip.com/en-us/tools-resources/develop/mplab-x-ide" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="link to MPLAB" src="https://www.microchip.com/en-us/tools-resources/develop/mplab-x-ide" /></a></td>
+<td>MPLAB / FREE / <a href="https://www.microchip.com/en-us/tools-resources/develop/mplab-x-ide">Link to MPLAB</a></td>
 </tr>
 </tbody>
 </table>
