deploy: 3160093e314219b8af2258caa22140787af8a720

--- a/schematic/index.html
+++ b/schematic/index.html
@@ -580,9 +580,9 @@
 
 
 <h1 id="esp32-wifi-subsystem">ESP32 - WIFI SUBSYSTEM</h1>
-<p><a class="glightbox" href="./InidividualSchematicRev1.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Wifi Subsystem" src="./InidividualSchematicRev1.png" /></a>
-Below are link for the schematic:
-<br><li><a href="./InidividualSchematicRev1.pdf">PDF</a> of schematic.</li>
+<p><a class="glightbox" href="../IndividualSchematicRev1.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Wifi Subsystem" src="../IndividualSchematicRev1.png" /></a>
+<br>Below are link for the schematic:
+<br><li><a href="../IndividualSchematicRev1.pdf">PDF</a> of schematic.</li>
 <br><li><a href="../IndividualSchematic.zip">ZIP file</a> of project.</li></p>
 
 
