--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   
     
   
-  Datasheet
+  Block Diagram
 
       </a>
     </li>
@@ -462,7 +462,7 @@
         
   
   <span class="md-ellipsis">
-    Datasheet
+    Block Diagram
   </span>
   
 
