--- a/subfolder/index.html
+++ b/subfolder/index.html
@@ -253,7 +253,7 @@
   
     
   
-  Datasheet
+  Block Diagram
 
       </a>
     </li>
@@ -416,7 +416,7 @@
         
   
   <span class="md-ellipsis">
-    Datasheet
+    Block Diagram
   </span>
   
 
