--- a/404.html
+++ b/404.html
@@ -238,7 +238,7 @@
   
     
   
-  Datasheet
+  Block Diagram
 
       </a>
     </li>
@@ -399,7 +399,7 @@
         
   
   <span class="md-ellipsis">
-    Datasheet
+    Block Diagram
   </span>
   
 
