--- a/billofMaterials/index.html
+++ b/billofMaterials/index.html
@@ -255,7 +255,7 @@
   
     
   
-  Datasheet
+  Block Diagram
 
       </a>
     </li>
@@ -424,7 +424,7 @@
         
   
   <span class="md-ellipsis">
-    Datasheet
+    Block Diagram
   </span>
   
 
