--- a/subfolder/another-subfile/index.html
+++ b/subfolder/another-subfile/index.html
@@ -251,7 +251,7 @@
   
     
   
-  Datasheet
+  Block Diagram
 
       </a>
     </li>
@@ -414,7 +414,7 @@
         
   
   <span class="md-ellipsis">
-    Datasheet
+    Block Diagram
   </span>
   
 
