deploy: 46f159bbfc8d72160f1142aa0f63345ef6d5a1e8

--- a/billofMaterials/index.html
+++ b/billofMaterials/index.html
@@ -887,7 +887,7 @@
 <td></td>
 <td></td>
 <td></td>
-<td></td>
+<td>Peralta</td>
 <td>0</td>
 <td></td>
 <td>-8</td>
@@ -903,7 +903,7 @@
 <td></td>
 <td></td>
 <td></td>
-<td></td>
+<td>Peralta</td>
 <td>0</td>
 <td></td>
 <td>-3</td>
