deploy: f0a8a5a5a5a426ee0dbaef16ec16b71b1be15c54

--- a/billofMaterials/index.html
+++ b/billofMaterials/index.html
@@ -937,7 +937,26 @@
 <td></td>
 <td>0</td>
 <td>-10</td>
-<td>D4,D5</td>
+<td>D6,D5</td>
+</tr>
+<tr>
+<td>DIODE SCHOTTKY 20V 1A TUMD2M</td>
+<td>3</td>
+<td>$0.43</td>
+<td>$1.29</td>
+<td>$0.43</td>
+<td>$1.29</td>
+<td>Rohm Semiconductor</td>
+<td>RB161VAM-20TR</td>
+<td><a href="https://www.digikey.com/en/products/detail/rohm-semiconductor/RB161VAM-20TR/5955698">Link</a></td>
+<td><a href="https://www.rohm.com/datasheet?p=RB161VAM-20&amp;dist=Digi-key&amp;media=referral&amp;source=digi-key.com&amp;campaign=Digi-key">Datasheet</a></td>
+<td>DigiKey</td>
+<td>RB161VAM-20CT-ND</td>
+<td>0</td>
+<td></td>
+<td>0</td>
+<td>-3</td>
+<td>D4</td>
 </tr>
 <tr>
 <td>Test points</td>
