deploy: f084de1abd961b483170d89c6d97964b4de8e959

--- a/schematic/index.html
+++ b/schematic/index.html
@@ -631,7 +631,8 @@
 <p><a class="glightbox" href="../subfolder/individualSchematic1.jpg" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Wifi Subsystem" src="../subfolder/individualSchematic1.jpg" /></a>
 <br>Below are link for the schematic:
 <br><li><a href="../subfolder/individualSchematic.pdf">PDF</a> of schematic.</li>
-<br><li><a href="../subfolder/IndividualSchematic.zip">ZIP file</a> of project.</li></p>
+<br><li><a href="../subfolder/IndividualSchematic.zip">ZIP file</a> of project.</li>
+<br>Here is the <a href="../subfolder/main.py">code</a> to test functionality of system.</p>
 
 
 
