deploy: 11106064d09b4fde0998f58e6b6dd133eeed900a

--- a/datasheet/index.html
+++ b/datasheet/index.html
@@ -629,6 +629,7 @@
 
 <h2 id="block-diagram">Block Diagram</h2>
 <p><a class="glightbox" href="../subfolder/IndividualBlockDiagram.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Figure 1: Block Diagram" src="../subfolder/IndividualBlockDiagram.png" /></a></p>
+<p>When creating the block diagram I first start by creating subsystems. Once I have all my subsystems I organize them by their power source. After organizing, I connect each subsystem to a pin or series of pins on the micro-controller, ensuring that each subsystem is in its respected power supply box. When connected to the team my role is the wifi. The goal of my system is to connect to the wifi and conduct bidirectional communication. This allows the user to not only use our exhibit through physical contact but also manipulate it over an MQTT application.</p>
 
 
 
