--- a/schematic/index.html
+++ b/schematic/index.html
@@ -628,10 +628,12 @@
   <h1>Schematic</h1>
 
 <h2 id="esp32-wifi-subsystem">ESP32 - WIFI SUBSYSTEM</h2>
-<p><a class="glightbox" href="../subfolder/individualSchematic1.jpg" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Wifi Subsystem" src="../subfolder/individualSchematic1.jpg" /></a>
-<br>Below are link for the schematic:
+<p><a class="glightbox" href="../subfolder/individualSchematic1.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Wifi Subsystem" src="../subfolder/individualSchematic1.png" /></a>
+<a class="glightbox" href="../subfolder/TopPCB_Luis.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="PCB" src="../subfolder/TopPCB_Luis.png" /></a>
+<br>Below is link for the schematic:
 <br><li><a href="../subfolder/individualSchematic.pdf">PDF</a> of schematic.</li>
-<br><li><a href="../subfolder/IndividualSchematic.zip">ZIP file</a> of project.</li>
+<br><li><a href="../subfolder/TopPCB_Luis.pdf">PDF</a> of PCB.</li>
+<br><li><a href="./subfolder/individualSchematic.zip">ZIP file</a> of project.</li>
 <br>Here is the <a href="../subfolder/main.py">code</a> to test functionality of system.</p>
 
 
