--- a/schematic/index.html
+++ b/schematic/index.html
@@ -654,8 +654,7 @@
 <p><br>Below is link for the schematic:
 <br><li><a href="../subfolder/individualSchematic.pdf">PDF</a> of schematic.</li>
 <br><li><a href="../subfolder/TopPCB_Luis.pdf">PDF</a> of PCB.</li>
-<br><li><a href="./subfolder/individualSchematic.zip">ZIP file</a> of project.</li>
-<br>Here is the <a href="../subfolder/main.py">code</a> to test functionality of system.</p>
+<br><li><a href="./subfolder/individualSchematic.zip">ZIP file</a> of project.</li></p>
 
 
 
